--- a/themes/customized/static/css/header.css
+++ b/themes/customized/static/css/header.css
@@ -1,21 +1,22 @@
 /* ------------------------------------------------------------------ */
 /* b. Header Styles
 /* ------------------------------------------------------------------ */
-header.navbar {
+header {
 	background-color: #383232;
-	padding: 15px 10px;
+	padding-bottom: 15px;
+	padding-top: 15px;
 }
 
-header.navbar .nav-item .nav-link {
+header .nav-item .nav-link {
 	color: #8a8383;
 }
 
-header.navbar .nav-item:hover .nav-link {
+header .nav-item:hover .nav-link {
 	color: #ffffff;
 }
 
 /* navbar toggler */
-header.navbar .navbar-toggler {
+header .navbar-toggler {
 	padding: 17px 17.5px;
 	margin: 0;
 	background-color: #11ABB0;
@@ -23,11 +24,11 @@ header.navbar .navbar-toggler {
 }
 
 /* header logo */
-header.navbar .navbar-brand {
+header .navbar-brand {
 	height: 48px;
 	padding: 0;
 }
 
-header.navbar .navbar-brand .logo {
+header .navbar-brand .logo {
    height: 48px;
 }
